k8s/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: prabhaajit/mern-client:$TAG
          ports:
            - containerPort: 80


---
# frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  ports:
    - port: 80
  selector:
    app: client
  type: LoadBalancer
