k8s/server.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: prabhaajit/mern-server:${TAG}
          ports:
            - containerPort: 5000
---

apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: server
  type: ClusterIP
